fixed issue where skills title and icons were not wrapping

--- a/src/skills.scss
+++ b/src/skills.scss
@@ -2,6 +2,7 @@
 
 .skills {
     display: flex;
+    flex-wrap: wrap;
 
     &__header {
         color: pallette.$primary-color;
